--- a/company_form.html
+++ b/company_form.html
@@ -122,6 +122,99 @@
         </div>
     </div><!--/form-group-->
 
+<!--Question 5 What level of time commitment will you require from the developer?-->
+  <div class="form-group">
+      <label>What level of time commitment will you require from the developer?</label>
+      <div class="form-check">
+        <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+        <label class="form-check-label" for="materialUnchecked">Full time</label>
+      </div>
+      <div class="form-check">
+          <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+          <label class="form-check-label" for="materialUnchecked">Part time</label>
+      </div>
+      <div class="form-check">
+            <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+            <label class="form-check-label" for="materialUnchecked">Hourly</label>
+      </div>
+  </div><!--/form-group-->
+
+<!--Question 6 How long do you need the developer? -->
+
+<div class="form-group">
+    <label>How long do you need the developer?</label>
+    <div class="form-check">
+      <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+      <label class="form-check-label" for="materialUnchecked">Less than 3 months</label>
+    </div>
+    <div class="form-check">
+        <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+        <label class="form-check-label" for="materialUnchecked">6 months</label>
+    </div>
+    <div class="form-check">
+          <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+          <label class="form-check-label" for="materialUnchecked">1 year</label>
+    </div>
+    <div class="form-check">
+        <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+        <label class="form-check-label" for="materialUnchecked">More than 1 year</label>
+    </div>
+</div><!--/form-group-->
+
+<!--Question 7 When do you need the developer to start?-->
+
+<div class="form-group">
+    <label>When do you need the developer to start?</label>
+    <div class="form-check">
+      <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+      <label class="form-check-label" for="materialUnchecked">Immediately</label>
+    </div>
+    <div class="form-check">
+        <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+        <label class="form-check-label" for="materialUnchecked">Within 3 weeks</label>
+    </div>
+    <div class="form-check">
+          <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+          <label class="form-check-label" for="materialUnchecked">In 6 months</label>
+    </div>
+    <div class="form-check">
+        <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+        <label class="form-check-label" for="materialUnchecked">In 1 year</label>
+    </div>
+</div><!--/form-group-->
+
+<!--Question 8 Are you open to working with a remote developer-->
+
+<div class="form-group">
+    <label>Are you open to working with a remote developer?</label>
+    <div class="form-check">
+      <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+      <label class="form-check-label" for="materialUnchecked">Yes</label>
+    </div>
+    <div class="form-check">
+        <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+        <label class="form-check-label" for="materialUnchecked">No</label>
+    </div>
+</div><!--/form-group-->
+
+  <!--Question 9 What is your budget?-->
+
+  <div class="form-group">
+      <label>What is your budget?</label>
+      <div class="form-check">
+        <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+        <label class="form-check-label" for="materialUnchecked">€15-€20/hour</label>
+      </div>
+      <div class="form-check">
+          <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+          <label class="form-check-label" for="materialUnchecked">€20-€30/hour</label>
+      </div>
+      <div class="form-check">
+          <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+          <label class="form-check-label" for="materialUnchecked">€30-€45/hour</label>
+      </div>
+  </div><!--/form-group-->
+
 
 
     <!-- Optional JavaScript -->
