10 questions and submit button

--- a/company_form.html
+++ b/company_form.html
@@ -215,6 +215,17 @@
       </div>
   </div><!--/form-group-->
 
+<!--Question 10 Tell us why someone would want to work for you -->
+
+  <div class="form-group">
+    <label>Tell us why someone would want to work for <small>(Optional)</small></label>
+    <textarea class="form-control" id="" cols="30" rows="10"></textarea>
+  </div>
+
+  <!--Submit button-->
+
+  <button type="submit" class="btn btn-dark">Submit</button>
+
 
 
     <!-- Optional JavaScript -->
