started on form for developer

--- a/company_form.html
+++ b/company_form.html
@@ -13,7 +13,8 @@
   <body>
     <div class="jumbotron text-center">
       <div class="container">
-        Please answer the following questions so we can find the perfect match for your company!
+        <h1 class="page-header">Join our network to start working with talented developers.</h1>
+        <p class="lead">Please answer the following questions so we can find the perfect match for your company!</p>
       </div>
     </div>
     <!--Question 1 Who are you looking for?-->
@@ -31,7 +32,7 @@
     </div>
 
     <!--Form style 2 radio buttons allowing only one choice-->
-    
+  <div class="container">
     <div class="form-group">
     <label>Who are you looking for?</label>
     <div class="form-check">
@@ -47,9 +48,10 @@
           <label class="form-check-label" for="materialUnchecked">Full stack developer</label>
         </div>
       </div>
-
+  </div>
     <!--Question 2 What skills would you like to see in your new hire?-->
 
+  <div class="container">
     <div class="form-group">
       <label>What skills are you looking for in a new hire?</label>
         <div class="form-check">
@@ -85,9 +87,9 @@
           <label class="form-check-label" for="materialUnchecked">Python</label>
       </div>
     </div><!--closing tag form-group-->
-
+  </div>
 <!--Question 3 What skill level are you looking for in a new hire?-->
-
+  <div class="container">
     <div class="form-group">
         <label>What skill level are you looking for in a new hire?</label>
         <div class="form-check">
@@ -103,9 +105,9 @@
               <label class="form-check-label" for="materialUnchecked">I'm open to any skill level</label>
         </div>
     </div><!--/form-group-->
-
+  </div>
 <!--Question 4 What type of project are you hiring for?-->
-
+  <div class="container">
     <div class="form-group">
         <label>What type of project are you hiring for?</label>
         <div class="form-check">
@@ -121,9 +123,10 @@
               <label class="form-check-label" for="materialUnchecked">Ongoing assistance</label>
         </div>
     </div><!--/form-group-->
-
+  </div>
 <!--Question 5 What level of time commitment will you require from the developer?-->
-  <div class="form-group">
+  <div class="container">
+    <div class="form-group">
       <label>What level of time commitment will you require from the developer?</label>
       <div class="form-check">
         <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
@@ -137,95 +140,98 @@
             <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
             <label class="form-check-label" for="materialUnchecked">Hourly</label>
       </div>
-  </div><!--/form-group-->
-
+    </div><!--/form-group-->
+  </div>
 <!--Question 6 How long do you need the developer? -->
 
-<div class="form-group">
-    <label>How long do you need the developer?</label>
-    <div class="form-check">
-      <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
-      <label class="form-check-label" for="materialUnchecked">Less than 3 months</label>
-    </div>
-    <div class="form-check">
+  <div class="container">
+    <div class="form-group">
+      <label>How long do you need the developer?</label>
+      <div class="form-check">
         <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
-        <label class="form-check-label" for="materialUnchecked">6 months</label>
-    </div>
-    <div class="form-check">
+        <label class="form-check-label" for="materialUnchecked">Less than 3 months</label>
+      </div>
+      <div class="form-check">
           <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
-          <label class="form-check-label" for="materialUnchecked">1 year</label>
-    </div>
-    <div class="form-check">
-        <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
-        <label class="form-check-label" for="materialUnchecked">More than 1 year</label>
-    </div>
-</div><!--/form-group-->
-
+          <label class="form-check-label" for="materialUnchecked">6 months</label>
+      </div>
+      <div class="form-check">
+            <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+            <label class="form-check-label" for="materialUnchecked">1 year</label>
+      </div>
+      <div class="form-check">
+          <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+          <label class="form-check-label" for="materialUnchecked">More than 1 year</label>
+      </div>
+    </div><!--/form-group-->
+  </div>
 <!--Question 7 When do you need the developer to start?-->
 
-<div class="form-group">
-    <label>When do you need the developer to start?</label>
-    <div class="form-check">
-      <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
-      <label class="form-check-label" for="materialUnchecked">Immediately</label>
-    </div>
-    <div class="form-check">
-        <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
-        <label class="form-check-label" for="materialUnchecked">Within 3 weeks</label>
-    </div>
-    <div class="form-check">
+  <div class="container">
+    <div class="form-group">
+        <label>When do you need the developer to start?</label>
+        <div class="form-check">
           <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
-          <label class="form-check-label" for="materialUnchecked">In 6 months</label>
-    </div>
-    <div class="form-check">
-        <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
-        <label class="form-check-label" for="materialUnchecked">In 1 year</label>
-    </div>
-</div><!--/form-group-->
-
+          <label class="form-check-label" for="materialUnchecked">Immediately</label>
+        </div>
+        <div class="form-check">
+            <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+            <label class="form-check-label" for="materialUnchecked">Within 3 weeks</label>
+        </div>
+        <div class="form-check">
+              <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+              <label class="form-check-label" for="materialUnchecked">In 6 months</label>
+        </div>
+        <div class="form-check">
+            <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+            <label class="form-check-label" for="materialUnchecked">In 1 year</label>
+        </div>
+    </div><!--/form-group-->
+  </div>
 <!--Question 8 Are you open to working with a remote developer-->
 
-<div class="form-group">
-    <label>Are you open to working with a remote developer?</label>
-    <div class="form-check">
-      <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
-      <label class="form-check-label" for="materialUnchecked">Yes</label>
-    </div>
-    <div class="form-check">
-        <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
-        <label class="form-check-label" for="materialUnchecked">No</label>
-    </div>
-</div><!--/form-group-->
-
-  <!--Question 9 What is your budget?-->
-
-  <div class="form-group">
-      <label>What is your budget?</label>
-      <div class="form-check">
-        <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
-        <label class="form-check-label" for="materialUnchecked">€15-€20/hour</label>
-      </div>
-      <div class="form-check">
+  <div class="container">
+    <div class="form-group">
+        <label>Are you open to working with a remote developer?</label>
+        <div class="form-check">
           <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
-          <label class="form-check-label" for="materialUnchecked">€20-€30/hour</label>
-      </div>
-      <div class="form-check">
-          <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
-          <label class="form-check-label" for="materialUnchecked">€30-€45/hour</label>
-      </div>
-  </div><!--/form-group-->
-
-<!--Question 10 Tell us why someone would want to work for you -->
-
-  <div class="form-group">
-    <label>Tell us why someone would want to work for <small>(Optional)</small></label>
-    <textarea class="form-control" id="" cols="30" rows="10"></textarea>
+          <label class="form-check-label" for="materialUnchecked">Yes</label>
+        </div>
+        <div class="form-check">
+            <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+            <label class="form-check-label" for="materialUnchecked">No</label>
+        </div>
+    </div><!--/form-group-->
   </div>
-
+  <!--Question 9 What is your budget?-->
+  <div class="container">
+    <div class="form-group">
+        <label>What is your budget?</label>
+        <div class="form-check">
+          <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+          <label class="form-check-label" for="materialUnchecked">€15-€20/hour</label>
+        </div>
+        <div class="form-check">
+            <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+            <label class="form-check-label" for="materialUnchecked">€20-€30/hour</label>
+        </div>
+        <div class="form-check">
+            <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+            <label class="form-check-label" for="materialUnchecked">€30-€45/hour</label>
+        </div>
+    </div><!--/form-group-->
+  </div>
+<!--Question 10 Tell us why someone would want to work for you -->
+  <div class="container">
+    <div class="form-group">
+      <label>Tell us why someone would want to work for <small>(Optional)</small></label>
+      <textarea class="form-control" id="" cols="30" rows="10"></textarea>
+    </div>
+  </div>
   <!--Submit button-->
-
-  <button type="submit" class="btn btn-dark">Submit</button>
-
+  <div class="container">
+    <button type="submit" class="btn btn-dark justify-content-center">Submit</button>
+  </div>
 
 
     <!-- Optional JavaScript -->
