--- a/coder_form.html
+++ b/coder_form.html
@@ -7,11 +7,54 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/styles.css">
 
-    <title>Hello, world!</title>
+    <title>Find-a-coder/work/quiz!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div class="jumbotron text-center">
+        <div class="container">
+            <h1>Apply now to join our network of talented developers</h1>
+            <p>Please answer the following questions so we can find the perfect company for you!
+            </p>
+        </div>
+    </div><!--/jumbotron-->
+
+    <!--Question 1 I am a ... dev-->
+    <div class="container">
+        <div class="form-group">
+            <label>I am a</label>
+            <div class="form-check">
+                <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+                <label class="form-check-label" for="materialUnchecked">Front end developer</label>
+            </div>
+            <div class="form-check">
+                <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+                <label class="form-check-label" for="materialUnchecked">Back end developer</label>
+            </div>
+            <div class="form-check">
+                <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+                <label class="form-check-label" for="materialUnchecked">Full stack developer</label>
+            </div>
+        </div>
+    </div>
+<!--Question 2 Last Name and First Name-->
+    <div class="container">
+        <form>
+            <div class="form-group w-25">
+                <label>Last name</label>
+                <input type="text" class="form-control" placeholder="Add Last Name">
+            </div>
+        
+            <div class="form-group w-25">
+                <label>First Name</label>
+                <input type="text" class="form-control" placeholder="Add First Name">
+            </div>
+        </form>
+    </div>
+
+
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
