address coder form

--- a/company_form.html
+++ b/company_form.html
@@ -19,8 +19,9 @@
     </div>
     <!--Question 1 Who are you looking for?-->
     <!--Form style 1-->
+    <form>
     <div class="container">
-      <form>
+      
         <div class="form-group w-25" >
           <label>Who are you looking for?</label>
           <select class="form-control">
@@ -28,7 +29,8 @@
             <option value="back end dev">Back end developer</option>
             <option value="full stack dev">Full stack developer</option>
           </select>
-      </form>
+        </div>
+      
     </div>
 
     <!--Form style 2 radio buttons allowing only one choice-->
@@ -232,6 +234,8 @@
   <div class="container">
     <button type="submit" class="btn btn-dark justify-content-center">Submit</button>
   </div>
+
+</form><!--End of form-->
 
 
     <!-- Optional JavaScript -->
