positioning done; color design not started

--- a/coder-profile/profile-full-coder.html
+++ b/coder-profile/profile-full-coder.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="profile.css">
     <title>User Profile</title>
 </head>
-<body class="bg-primary">
+<body class="bg-info">
 <article class="grid-container">
-    <article id="car" class="card bg-warning text-light" style="width: 18rem;">
-    <img src="pics/me.jpg" class="card-img-top w-100 h-100 rounded-circle" alt="profile_pic">
+    <article id="car" class="card bg-warning">
+    <img src="pics/me.jpg" class="card-img-top rounded-circle" alt="profile_pic">
     <div class="card-body">
         <h4 class="card-title">Claas Steigüber</h4>
         <p class="card-text">Skills:</p>
@@ -24,14 +24,14 @@
     </div>
 
     </article>
-    <section id="av" class="row">
+    <section id="av" class="row justify-content-around">
         <h3>Availability: Available</h3>
         <button>Edit</button>
     </section>
-    <section id="inside-nav" class="row justify-content-around text-light" >
-        <a href="#" style="text-decoration: none;">About</a>
-        <a href="#" style="text-decoration: none;">References 30</a>
-        <a href="#" style="text-decoration: none;">Contacts 5</a>
+    <section id="ref" class="row justify-content-around">
+        <a href="#">About</a>
+        <a href="#tes">References 3</a>
+        <!--a href="#">Contacts 5</a-->
         <p>Member since 2019</p>
     </section>
 
@@ -39,7 +39,7 @@
         <h3>Education</h3>
             <p>I graduated at BeCode university</p>        
         <h3>Experience</h3>
-            <p>I hold tremendous experience with all kind of programming languages. Writing the codes for robots used in space exploration is one of my specielties.</p>
+            <p>I hold tremendous experience with all kind of programming languages. Coding robots used in space exploration is one of my specialties.</p>
             <p>My list of former employers includes (but is not limited to): Boston Dynamics, NASA, Google, Microsoft, Luigi's Pizza Palace and facebook.</p>
         <h3>Interests</h3>
             <ul>
@@ -52,7 +52,7 @@
     </section>
 
     <section id="tes" class="container">
-        <h3>Testimonies</h3>
+        <h3 style="align-content: center;">Testimonies</h3>
         <section class="row justify-content-around">
             <p>from companies</p>
             <p>from colleages</p>
@@ -72,7 +72,7 @@
                     <h1 class="display-4">Luigi's Pizza Palace</h1>
                     <p class="lead">Member since 2019</p>
                     <hr class=" my-4">
-                    <p>Claas is an amazing Pizza baker, but unfortunately, he ate most of the delecious pizzas himself before we could sell them to our customers.</p>
+                    <p>Who would have thought that coding can optimize the progress of pizza baking that much? His codes really put us on the top of pizza baking efficiancy. Unfortunately, he ate most of the delecious pizzas himself before we could sell them to our customers.</p>
                 </div>
         </section>
         <section id="testi-boston" class="row">
@@ -81,8 +81,8 @@
                     <h1 class="display-4">Boston Dynamics</h1>
                     <p class="lead">Member since 2019</p>
                     <hr class=" my-4">
-                    <p>Claas completly screwed up with our robots. In our household-assisting robots he implemented the codes for autonomous lethal weapons.</p>
-                    <p>Luckily, nobody died and the damage done can be reimbursed by the winst of selling the material from the surveiliance cameras to Hollywood.</p>
+                    <p>Claas completly screwed up our routine. In our household-assisting robots he implemented the codes for autonomous lethal weapons.</p>
+                    <p>Luckily, casulties could be minimized and the damage done can be reimbursed by the winst of selling the material from the surveiliance cameras to Hollywood.</p>
                     <p>Look out for the new movie "Terminater 7: Boston apocalypse"!</p>
                 </div>
         </section>
