--- a/coder_form.html
+++ b/coder_form.html
@@ -127,6 +127,52 @@
                 </div>
             </div>
         </div>
+
+<!--Question 7 What skills do you have?-->
+
+<div class="container">
+        <div class="form-group">
+          <label>What skills do you have?</label>
+            <div class="form-check">
+              <input type="checkbox" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+              <label class="form-check-label" for="materialUnchecked">JavaScript</label>
+            </div>
+            <div class="form-check">
+                <input type="checkbox" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+                <label class="form-check-label" for="materialUnchecked">CSS3</label>
+            </div>
+            <div class="form-check">
+                  <input type="checkbox" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+                  <label class="form-check-label" for="materialUnchecked">HTML5</label>
+            </div>
+            <div class="form-check">
+                <input type="checkbox" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+                <label class="form-check-label" for="materialUnchecked">PHP</label>
+            </div>
+            <div class="form-check">
+              <input type="checkbox" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+              <label class="form-check-label" for="materialUnchecked">React</label>
+            </div>
+            <div class="form-check">
+              <input type="checkbox" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+              <label class="form-check-label" for="materialUnchecked">Node.js</label>
+            </div>
+          <div class="form-check">
+            <input type="checkbox" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+            <label class="form-check-label" for="materialUnchecked">MySQL</label>
+          </div>
+          <div class="form-check">
+              <input type="checkbox" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+              <label class="form-check-label" for="materialUnchecked">Python</label>
+          </div>
+            <div class="form-group w-25">
+                <input type="text" class="form-control mt-2 mb-2" placeholder="Other Skills">
+                <input type="text" class="form-control mb-2" placeholder="Other Skills">
+                <input type="text" class="form-control mb-2" placeholder="Other Skills">
+                <input type="text" class="form-control mb-2" placeholder="Other Skills">
+            </div>
+        </div><!--closing tag form-group-->
+    </div>
     
 
 
