changed digits into text

--- a/coder_form.html
+++ b/coder_form.html
@@ -115,15 +115,15 @@
                 </div>
                 <div class="form-check">
                     <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
-                    <label class="form-check-label" for="materialUnchecked">Less than 1 year</label>
+                    <label class="form-check-label" for="materialUnchecked">Less than one year</label>
                 </div>
                 <div class="form-check">
                     <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
-                    <label class="form-check-label" for="materialUnchecked">Between 1 and 3 years</label>
+                    <label class="form-check-label" for="materialUnchecked">Between one and three years</label>
                 </div>
                 <div class="form-check">
                     <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
-                    <label class="form-check-label" for="materialUnchecked">More than 3 years</label>
+                    <label class="form-check-label" for="materialUnchecked">More than three years</label>
                 </div>
             </div>
         </div>
@@ -172,8 +172,71 @@
                 <input type="text" class="form-control mb-2" placeholder="Other Skills">
             </div>
         </div><!--closing tag form-group-->
-    </div>
+    </div><!--closing container class-->
+
+<!--Question 8 Time commitment-->
+
+    <div class="container">
+        <div class="form-group">
+            <label>What level of time commitment are you able to offer?</label>
+            <div class="form-check">
+                    <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+                    <label class="form-check-label" for="materialUnchecked">Full time</label>
+            </div>
+            <div class="form-check">
+                <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+                <label class="form-check-label" for="materialUnchecked">Part time</label>
+            </div>
+            <div class="form-check">
+                <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+                <label class="form-check-label" for="materialUnchecked">Hourly</label>
+            </div>
+        </div><!--/form-group-->
+    </div><!--/container-->
     
+    <div class="container">
+        <div class="form-group">
+            <label>For how long can you make yourself available?</label>
+            <div class="form-check">
+                <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+                <label class="form-check-label" for="materialUnchecked">Less than three months</label>
+            </div>
+            <div class="form-check">
+                <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+                <label class="form-check-label" for="materialUnchecked">Six months</label>
+            </div>
+            <div class="form-check">
+                <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+                <label class="form-check-label" for="materialUnchecked">One year</label>
+            </div>
+            <div class="form-check">
+                <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+                <label class="form-check-label" for="materialUnchecked">More than one year</label>
+            </div>
+        </div><!--/form-group-->
+    </div><!--/container-->
+
+    <div class="container">
+        <div class="form-group">
+            <label>When are you able to start?</label>
+            <div class="form-check">
+                    <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+                    <label class="form-check-label" for="materialUnchecked">Immediately</label>
+            </div>
+            <div class="form-check">
+                      <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+                      <label class="form-check-label" for="materialUnchecked">Within three weeks</label>
+            </div>
+            <div class="form-check">
+                        <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+                        <label class="form-check-label" for="materialUnchecked">In six months</label>
+            </div>
+            <div class="form-check">
+                      <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+                      <label class="form-check-label" for="materialUnchecked">In six months to one year</label>
+            </div>
+        </div><!--/form-group-->
+    </div>
 
 
 
