--- a/company_form.html
+++ b/company_form.html
@@ -151,19 +151,19 @@
       <label>How long do you need the developer?</label>
       <div class="form-check">
         <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
-        <label class="form-check-label" for="materialUnchecked">Less than 3 months</label>
+        <label class="form-check-label" for="materialUnchecked">Less than three months</label>
       </div>
       <div class="form-check">
           <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
-          <label class="form-check-label" for="materialUnchecked">6 months</label>
+          <label class="form-check-label" for="materialUnchecked">Six months</label>
       </div>
       <div class="form-check">
             <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
-            <label class="form-check-label" for="materialUnchecked">1 year</label>
+            <label class="form-check-label" for="materialUnchecked">One year</label>
       </div>
       <div class="form-check">
           <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
-          <label class="form-check-label" for="materialUnchecked">More than 1 year</label>
+          <label class="form-check-label" for="materialUnchecked">More than one year</label>
       </div>
     </div><!--/form-group-->
   </div>
@@ -178,15 +178,15 @@
         </div>
         <div class="form-check">
             <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
-            <label class="form-check-label" for="materialUnchecked">Within 3 weeks</label>
+            <label class="form-check-label" for="materialUnchecked">Within three weeks</label>
         </div>
         <div class="form-check">
               <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
-              <label class="form-check-label" for="materialUnchecked">In 6 months</label>
+              <label class="form-check-label" for="materialUnchecked">In six months</label>
         </div>
         <div class="form-check">
             <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
-            <label class="form-check-label" for="materialUnchecked">In 1 year</label>
+            <label class="form-check-label" for="materialUnchecked">In one year</label>
         </div>
     </div><!--/form-group-->
   </div>
@@ -225,7 +225,7 @@
   </div>
 <!--Question 10 Tell us why someone would want to work for you -->
   <div class="container">
-    <div class="form-group">
+    <div class="form-group w-50">
       <label>Tell us why someone would want to work for <small>(Optional)</small></label>
       <textarea class="form-control" id="" cols="30" rows="10"></textarea>
     </div>
