finished main question for both company as programmer

--- a/company_form.html
+++ b/company_form.html
@@ -225,9 +225,9 @@
   </div>
 <!--Question 10 Tell us why someone would want to work for you -->
   <div class="container">
-    <div class="form-group w-50">
-      <label>Tell us why someone would want to work for <small>(Optional)</small></label>
-      <textarea class="form-control" id="" cols="30" rows="10"></textarea>
+    <div class="form-group w-75">
+      <label>Tell us why someone would want to work for your company <small>(Optional)</small></label>
+      <textarea class="form-control" id="" cols="30" rows="10" placeholder="Be creative!"></textarea>
     </div>
   </div>
   <!--Submit button-->
