--- a/coder_form.html
+++ b/coder_form.html
@@ -193,7 +193,7 @@
             </div>
         </div><!--/form-group-->
     </div><!--/container-->
-    
+<!--Question 9 For how long can you make yourself available?-->
     <div class="container">
         <div class="form-group">
             <label>For how long can you make yourself available?</label>
@@ -215,7 +215,7 @@
             </div>
         </div><!--/form-group-->
     </div><!--/container-->
-
+<!--Question 10 When are you able to start?-->
     <div class="container">
         <div class="form-group">
             <label>When are you able to start?</label>
@@ -237,6 +237,38 @@
             </div>
         </div><!--/form-group-->
     </div>
+<!--Question 11 Are you willing to work on location or remote?-->
+    <div class="container">
+        <div class="form-group">
+            <label>Do you want to work on location or remotely?</label>
+            <div class="form-check">
+                <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+                <label class="form-check-label" for="materialUnchecked">On location</label>
+            </div>
+            <div class="form-check">
+                <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+                <label class="form-check-label" for="materialUnchecked">Remote work </label>
+            </div>
+            <div class="form-check">
+                <input type="radio" class="form-check-input" id="materialUnchecked" name="materialExampleRadios">
+                <label class="form-check-label" for="materialUnchecked">I am open to both.</label>
+            </div>
+        </div><!--/form-group-->
+    </div><!--/container-->
+
+<!--Question 10 Tell us why someone would want to work for you -->
+    <div class="container">
+        <div class="form-group w-75">
+            <label>Tell us why companies would want to hire you </label>
+            <label><small>(Optional)</small></label>
+            
+            <textarea class="form-control" id="" cols="30" rows="10" placeholder="Be creative!"></textarea>
+        </div>
+    </div>
+      <!--Submit button-->
+      <div class="container">
+        <button type="submit" class="btn btn-dark justify-content-center">Submit</button>
+      </div>
 
 
 
